fixed resume being covered by top nav on mobile

--- a/vite-project/src/assets/Resume.css
+++ b/vite-project/src/assets/Resume.css
@@ -15,7 +15,7 @@
     .resume-container {
         width: 100%;
         padding: 10px;
-        margin-top: 20px;
+        margin-top: 75px;
         min-height: 600px;
     }
 }
